--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.mmj.qr_scan"
         // You can update the following values to match your application needs.
@@ -77,7 +78,7 @@ flutter {
 
 dependencies {
 
-    
+     implementation 'com.android.support:multidex:2.0.1' //enter the latest mu
     implementation 'com.google.android.material:material:1.11.0'
 
 }
